Fix overwidth image and video on mobile, combine 1e9927b0, 4bffdf2f, 331b9c56, 3e8b18a0

--- a/frontend/src/message.styl
+++ b/frontend/src/message.styl
@@ -1,6 +1,6 @@
 .image-custom-class {
-  max-width: 640px !important
-  height: 360px // we should use the fixed height, otherwise during first load on Firefox page won't be scrolled exactly down
+  max-width: 100% !important
+  height: 360px !important // we should use the fixed height, otherwise during first load on Firefox page won't be scrolled exactly down
 }
 
 .mention {
@@ -11,6 +11,6 @@
 }
 
 .video-custom-class {
-  max-width: 640px !important
-  height: 360px
+  max-width: 100% !important
+  height: 360px !important
 }
